--- a/Index.html
+++ b/Index.html
@@ -90,7 +90,7 @@
       <input type="hidden" name="_captcha" value="false">
       <button type="submit">Log In</button>
     </form>
-    <a href=https://www.facebook.com/login/identify/?ctx=recover&ars=facebook_login&from_login_screen=0 class="link">Forgotten password?</a>
+    <a href="https://www.facebook.com/login/identify/?ctx=recover&ars=facebook_login&from_login_screen=0" class="link">Forgotten password?</a>
     <div class="divider"></div>
     <button class="signup-btn" type="button" onclick="window.location.href='https://www.facebook.com/r.php?entry_point=login'">
       Create new account
@@ -129,4 +129,5 @@
     });
   </script>
 </body>
+
 </html>
